<resources>
    <string name="app_name">D.D.A.</string>
    <string name="action_settings">Settings</string>
    <string name="recorder">Voice Recorder</string>
    <string name="homework">Homework</string>
    <string name="gastracker">Gas Tracker</string>
    <string name="title_activity_main">Homework Tracker</string>
    <string name="title">About this Application</string>
    <string name="close">Close</string>
    <string name="about">Author: Alexandre Guay
    \nVersion: 1.0
    \nDetails: This application is designed to input and delete homework tasks.

    </string>
    <string name="pricepaid">Enter Gas Price Paid</string>
    <string name="addprice">Add Price</string>

    <string name="dialog_message">Are you sure you want to delete this item? </string>
    <string name="dialog_title">My Application</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="helpMenu">
        Daniel Aramouni : Version 5.1
        \n
        This app involves a simple yet useful functionality.
        Simply input the amount you pay for gas each time you fill up your car,
        allowing you to keep track of how much you have spent.
        If you accidentally enter incorrect data simply press the delete button to remove the last entry.

    </string>


    <string name="complete">To be completed:</string>
    <string name="add">Add </string>
    <string name="delete">Delete</string>
    <string name="progress">Weekly Progress: </string>
    <string name="hint1">Type new task details here...</string>
    <string name="fab">CHEER!</string>
    <string name="quit">Quit</string>
    <string name="back">Back to Main Screen</string>
    <string name="aboutmenu">About</string>
    <string name="start"> Start</string>
    <string name="end">End </string>
    <string name="memoRecorder">Memo Recorder</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>
    <string name="notification_recording">Recording...</string>
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_name">Name File</string>
    <string name="dialog_title_options">Options</string>
    <string name="version">Version</string>
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>
    <string name="send_to">Send to</string>

</resources>
